src/commands/select/snapshots/wt__commands__select__items__tests__cache_miss.snap
---
source: src/commands/select/items.rs
expression: "cache_miss.preview_for_mode(PreviewMode::Summary, 80, 40)"
---
[2m○[22m Generating summary...

Press 5 again to refresh once generation completes.
