src/commands/select/snapshots/wt__commands__select__items__tests__direct.snap
---
source: src/commands/select/items.rs
expression: "WorktreeSkimItem::compute_summary_preview(&main_item)"
---
[2m○[22m Generating summary...

Press 5 again to refresh once generation completes.
